# dbt-dag-factory

./: .flake8  .pre-commit-config.yaml  LICENSE  README.md  mypy.ini  pyproject.toml
.github/workflows/: test.yaml
dbt_dag_factory/: __init__.py  __version__.py  factory.py  graph.py
tests/: manifest.json  test_dbt_dag_factory.py  test_manifest_graph.py
